--- a/client/src/components/homepage.css
+++ b/client/src/components/homepage.css
@@ -1,86 +1,82 @@
-#carouselExampleControls{
+#carouselExampleControls {
   text-align: center;
   background-color: #ef8172;
-  color:#fff;
-
+  color: #fff;
 }
 
-.image{
+.image {
   left: 0;
-bottom: 0;
-width: 100%;
-height: 100vh;
+  bottom: 0;
+  width: 100%;
+  height: 80vh;
 
-color: white;
-text-align: center;
-background-position: center;
- background-repeat: no-repeat;
-background-size: cover;
+  color: white;
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-#features{
-  padding:6%;
-  background-color:inherit ;
-  position:relative;
+#features {
+  padding: 6%;
+  background-color: inherit;
+  position: relative;
 }
-.feature-box{
+.feature-box {
   text-align: center;
-  padding:5%;
+  padding: 5%;
 }
-.icon{
-  color:#ef8172;
+.icon {
+  color: #ef8172;
   margin-bottom: 1rem;
 }
-.icon:hover{
-  color:#ff4c68;
+.icon:hover {
+  color: #ff4c68;
 }
-h5{
-  padding:6% 6%;
-}
-.fas{
+
+.fas {
   padding-bottom: 10%;
-  color:#4F344B;
+  color: #4f344b;
 }
 .service {
-	background:  #464B4E;
-	padding-top: 30px;
+  background: #464b4e;
+  padding-top: 30px;
   padding-bottom: 90px;
 }
-.service-box{
-  background:#4F344B;
+.service-box {
+  background: white;
+  color: black;
 }
-.title{
+.title {
   padding-left: 220px;
   padding-right: 20px;
   padding-top: 20px;
   padding-bottom: 50px;
 }
 .service .service-box {
-	padding: 30px 20px;
-	box-shadow: #00000040 0px 0px 19px 0px;
-    margin-bottom: 30px;
-    text-align: center;
-    color:#000;
+  padding: 30px 20px;
+  box-shadow: #14ff2a 0px 0px 19px 0px;
+  margin-bottom: 30px;
+  text-align: center;
+  color: #000;
 }
 
 .service .service-box i img {
-	height: 150px;
+  height: 150px;
 }
 
 .service .service-box h3 {
-	font-weight: 500;
-	font-size: 25px;
-	line-height: 10px;
-	color: #fff;
-	padding-right: 80px;
+  font-weight: 500;
+  font-size: 25px;
+  line-height: 10px;
+  color: black;
+  padding-right: 80px;
 }
-.second{
-  width:210px;
+.second {
+  width: 210px;
 }
-
-
 
 .service .service-box p {
-    color: #fff;
-	font-size: 16px;
-	line-height: 20px;
+  color: black;
+  font-size: 16px;
+  line-height: 20px;
 }
